--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "dom-delegator": "^13.1.0",
     "event-emitter": "^0.3.4",
-    "virtual-dom": "^2.1.1"
+    "virtual-dom": "^2.1.1",
+    "moment": "^2.13.0",
+    "moment-duration-format": "^1.3.0"
   },
   "devDependencies": {
     "babel-loader": "^5.1.4",
@@ -40,6 +42,6 @@
   "scripts": {
     "compile": "babel main.js --out-file index.js",
     "prepublish": "npm run compile",
-    "server": "node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "server": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base dist/ --colors"
   }
 }
