--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "timepoint-selection",
   "version": "0.0.1",
-  "description": "Key controlled time point selection",
+  "description": "Key controlled time input duration selection",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "babel main.js --out-file index.js",
+    "prepublish": "npm run compile",
+    "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base dist/ --colors"
   },
   "babel": {
     "presets": [
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      "add-module-exports"
     ]
   },
   "repository": {
@@ -36,17 +41,14 @@
     "moment-duration-format": "^1.3.0"
   },
   "devDependencies": {
-    "babel-loader": "^5.1.4",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.3.13",
-    "webpack": "^1.12.9",
+    "gh-pages": "^0.11.0",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.0"
-  },
-  "scripts": {
-    "compile": "babel main.js --out-file index.js",
-    "prepublish": "npm run compile",
-    "server": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base dist/ --colors"
   }
 }
