--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "babel main.js --out-file index.js",
     "deploy": "webpack && gh-pages -d dist -b gh-pages -o origin",
-    "prepublish": "npm run compile",
+    "prepublish": "npm run compile && npm run deploy",
     "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base dist/ --colors"
   },
   "babel": {
