--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/naomiaro/timepoint-selection#readme",
   "dependencies": {
+    "lodash.assign": "^4.0.9",
     "moment": "^2.13.0",
     "moment-duration-format": "^1.3.0"
   },
