Fix selection issue when tabbing out.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "babel main.js --out-file index.js",
     "deploy": "webpack && gh-pages -d dist -b gh-pages -o origin",
     "prepublish": "npm run compile && npm run deploy",
-    "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base dist/ --colors"
+    "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base dist/ --colors --inline --host 0.0.0.0"
   },
   "babel": {
     "presets": [
